# libtorch_practice

./: CMakeLists.txt  README.md  package.xml
scripts/: resnet18_pretrained_torchscript.py
src/: detection.cpp  detection_component.cpp  detection_node.cpp  libtorch_test.cpp
